--- a/app/components/UI/account/activity_feed.html.erb
+++ b/app/components/UI/account/activity_feed.html.erb
@@ -1,15 +1,15 @@
 <%= turbo_frame_tag dom_id(account, "entries") do %>
   <div class="bg-container p-5 shadow-border-xs rounded-xl">
     <div class="flex items-center justify-between mb-4" data-testid="activity-menu">
-      <%= tag.h2 "Activity", class: "font-medium text-lg" %>
+      <%= tag.h2 t("accounts.show.activity.title"), class: "font-medium text-lg" %>
 
       <% if account.manual? %>
         <%= render DS::Menu.new(variant: "button") do |menu| %>
-          <% menu.with_button(text: "New", variant: "secondary", icon: "plus") %>
+          <% menu.with_button(text: t("accounts.show.activity.new"), variant: "secondary", icon: "plus") %>
 
           <% menu.with_item(
               variant: "link",
-              text: "New balance",
+              text: t("accounts.show.activity.new_balance"),
               icon: "circle-dollar-sign",
               href: new_valuation_path(account_id: account.id),
               data: { turbo_frame: :modal }) %>
@@ -17,7 +17,7 @@
           <% unless account.crypto? %>
             <% menu.with_item(
                 variant: "link",
-                text: "New transaction",
+                text: t("accounts.show.activity.new_transaction"),
                 icon: "credit-card",
                 href: account.investment? ? new_trade_path(account_id: account.id) : new_transaction_path(account_id: account.id),
                 data: { turbo_frame: :modal }) %>
@@ -40,7 +40,7 @@
               <%= hidden_field_tag :account_id, account.id %>
 
               <%= form.search_field :search,
-                            placeholder: "Search entries by name",
+                            placeholder: t("accounts.show.activity.search.placeholder"),
                             value: search,
                             class: "form-field__input placeholder:text-sm placeholder:text-secondary",
                             "data-auto-submit-form-target": "auto" %>
@@ -51,7 +51,7 @@
     </div>
 
     <% if activity_dates.empty? %>
-      <p class="text-secondary text-sm p-4">No entries yet</p>
+      <%= tag.p t("accounts.show.activity.no_entries"), class: "text-secondary text-sm p-4" %>
     <% else %>
       <%= tag.div id: dom_id(account, "entries_bulk_select"),
                 data: {
@@ -68,10 +68,10 @@
             <%= check_box_tag "selection_entry",
                               class: "checkbox checkbox--light",
                               data: { action: "bulk-select#togglePageSelection" } %>
-            <p>Date</p>
+            <%= tag.p t("accounts.show.activity.date") %>
           </div>
 
-          <%= tag.p "Amount", class: "col-span-4 justify-self-end" %>
+          <%= tag.p t("accounts.show.activity.amount"), class: "col-span-4 justify-self-end" %>
         </div>
 
         <div>
