Extract more hardcoded strings to i18n
- Add i18n keys for accounts (index, _account, show/_menu)
- Add i18n keys for budgets/show (categories, edit)
- Add i18n keys for onboardings (goals, trial pages)
- Create budgets locale file

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -12,7 +12,7 @@
               <%= account.name %>
             </span>
             <span class="text-red-500 animate-pulse">
-              (deletion in progress...)
+              (<%= t('.deletion_in_progress') %>)
             </span>
           </p>
         <% else %>
@@ -63,7 +63,7 @@
 
       <% if account.draft? %>
         <%= render DS::Link.new(
-          text: "Complete setup",
+          text: t('.complete_setup'),
           href: edit_account_path(account, return_to: return_to),
           variant: :outline,
           frame: :modal
