Extract more hardcoded strings to i18n (3)
- Add i18n keys for layouts/application (trial banner)
- Add i18n keys for onboardings/_logout
- Add i18n keys for settings/billings/show
- Create layouts locale file

--- a/app/views/onboardings/_logout.html.erb
+++ b/app/views/onboardings/_logout.html.erb
@@ -1,5 +1,5 @@
  <%= render DS::Button.new(
-        text: "Sign out",
+        text: t('.sign_out'),
         icon: "log-out",
         icon_position: :right,
         variant: "ghost",
