--- a/app/views/rules/_form.html.erb
+++ b/app/views/rules/_form.html.erb
@@ -12,10 +12,10 @@
   <section class="space-y-4">
     <div class="flex items-center gap-1 text-secondary">
       <%= icon "tag", size: "sm" %>
-      <h3 class="text-sm font-medium text-primary">Rule name (optional)</h3>
+      <h3 class="text-sm font-medium text-primary"><%= t('.name_label') %></h3>
     </div>
     <div class="ml-6">
-      <%= f.text_field :name, placeholder: "Enter a name for this rule", class: "form-field__input" %>
+      <%= f.text_field :name, placeholder: t('.name_placeholder'), class: "form-field__input" %>
     </div>
   </section>
 
@@ -50,8 +50,8 @@
       </ul>
 
       <div class="flex items-center gap-2">
-        <%= render DS::Button.new(text: "Add condition", icon: "plus", variant: "ghost", type: "button", data: { action: "rules#addCondition" }) %>
-        <%= render DS::Button.new(text: "Add condition group", icon: "copy-plus", variant: "ghost", type: "button", data: { action: "rules#addConditionGroup" }) %>
+        <%= render DS::Button.new(text: t('.add_condition'), icon: "plus", variant: "ghost", type: "button", data: { action: "rules#addCondition" }) %>
+        <%= render DS::Button.new(text: t('.add_condition_group'), icon: "copy-plus", variant: "ghost", type: "button", data: { action: "rules#addConditionGroup" }) %>
       </div>
     </div>
   </section>
@@ -75,7 +75,7 @@
         <% end %>
       </ul>
 
-      <%= render DS::Button.new(text: "Add action", icon: "plus", variant: "ghost", type: "button", data: { action: "rules#addAction" }) %>
+      <%= render DS::Button.new(text: t('.add_action'), icon: "plus", variant: "ghost", type: "button", data: { action: "rules#addAction" }) %>
     </div>
   </section>
 
@@ -87,13 +87,13 @@
     <div class="ml-6 space-y-3">
       <div class="flex items-center gap-2">
         <%= f.radio_button :effective_date_enabled, false, checked: rule.effective_date.nil?, data: { action: "rules#clearEffectiveDate" } %>
-        <%= f.label :effective_date_enabled_false, "All past and future #{rule.resource_type}s", class: "text-sm text-primary" %>
+        <%= f.label :effective_date_enabled_false, t('.all_resources', resource: rule.resource_type.pluralize), class: "text-sm text-primary" %>
       </div>
 
       <div class="flex items-center gap-2">
         <div class="flex items-center gap-2">
           <%= f.radio_button :effective_date_enabled, true, checked: rule.effective_date.present? %>
-          <%= f.label :effective_date_enabled_true, "Starting from", class: "text-sm text-primary" %>
+          <%= f.label :effective_date_enabled_true, t('.starting_from'), class: "text-sm text-primary" %>
         </div>
 
         <%= f.date_field :effective_date, container_class: "w-fit", data: { rules_target: "effectiveDateInput" } %>
