Extract hardcoded strings from rules, transfers, and valuations views
- rules/new.html.erb: dialog title and back link
- transfers/show.html.erb: labels in overview section and category select
- valuations/confirm_create.html.erb: dialog title and submit button
- valuations/confirm_update.html.erb: dialog title and submit button

--- a/app/views/rules/new.html.erb
+++ b/app/views/rules/new.html.erb
@@ -1,7 +1,7 @@
-<%= link_to "Back to rules", rules_path %>
+<%= link_to t(".back_to_rules"), rules_path %>
 
 <%= render DS::Dialog.new do |dialog| %>
-  <% dialog.with_header(title: "New #{@rule.resource_type} rule") %>
+  <% dialog.with_header(title: t(".title", resource_type: @rule.resource_type)) %>
   <% dialog.with_body do %>
     <%= render "rules/form", rule: @rule %>
   <% end %>
