Extract hardcoded strings from trades, transfer_matches, onboardings, categories, and budgets
- trades/_form.html.erb and show.html.erb: type select options
- transfer_matches/new.html.erb and _matching_fields.html.erb: complete i18n
- onboardings/preferences.html.erb and show.html.erb: theme and form labels
- categories/_form.html.erb: color, icon, classification labels
- budgets/edit.html.erb: title, labels, and autosuggest section

--- a/app/views/trades/_form.html.erb
+++ b/app/views/trades/_form.html.erb
@@ -10,11 +10,11 @@
 
     <div class="space-y-2">
       <%= form.select :type, [
-          ["Buy", "buy"],
-          ["Sell", "sell"],
-          ["Deposit", "deposit"],
-          ["Withdrawal", "withdrawal"],
-          ["Interest", "interest"]
+          [t(".buy"), "buy"],
+          [t(".sell"), "sell"],
+          [t(".deposit"), "deposit"],
+          [t(".withdrawal"), "withdrawal"],
+          [t(".interest"), "interest"]
       ],
       { label: t(".type"), selected: type },
       { data: {
@@ -34,7 +34,7 @@
                             required: true %>
           </div>
         <% else %>
-          <%= form.text_field :manual_ticker, label: "Ticker symbol", placeholder: "AAPL", required: true %>
+          <%= form.text_field :manual_ticker, label: t(".ticker_symbol"), placeholder: t(".ticker_symbol_placeholder"), required: true %>
         <% end %>
       <% end %>
 
